--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,10 @@
     <artifactId>junit</artifactId>
 </dependency>
 
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-websocket</artifactId>
+    </dependency>
 		<dependency>
     <groupId>org.hibernate</groupId>
     <artifactId>hibernate-validator</artifactId>
