--- a/chat-application-starter/src/main/resources/application.properties
+++ b/chat-application-starter/src/main/resources/application.properties
@@ -2,6 +2,7 @@
 server.port=3308
 
 
+
 spring.datasource.url=jdbc:mysql://localhost:3306/chat_application
 spring.datasource.username=root
 spring.datasource.password=admin
@@ -9,7 +10,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 
 
 
